--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
         <!-- Action is where the data is sent. In our case, predict page.
         If action is omitted, it assumed to be the current page -->
        <form action="{{ url_for('predict')}}"method="post">
-           <input type="text" name="percent biking" placeholder="Percent population biking" required="required" /><br>
-           <input type="text" name="percent smoking" placeholder="Percent population smoking" required="required" /><p>
+           <input type="text" name="Home Team" placeholder="Enter home team" required="required" /><br>
+           <input type="text" name="Away Team" placeholder="Enter away team" required="required" /><p>
    
-           <button type="submit" class="btn btn-primary btn-block btn-large">Predict percent population with heart disease</button></p>
+           <button type="submit" class="btn btn-primary btn-block btn-large">Predict probability home team wins</button></p>
        </form>
    
       <br>
