--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,21 @@
     <!-- Make it compatible to mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
-    <title>Heart Disease Percent</title>
+    <title>NHL Game Predictor</title>
       
 </head>
     
 <body style="background: #000;">
  <div class="login">
-        <h1 style="color:Violet;">Heart disease prediction</h1>
+        <h1 style="color:Grey;">NHL Game Prediction Model</h1>
     
      <!-- Action is where the data is sent. In our case, predict page.
      If action is omitted, it assumed to be the current page -->
     <form action="{{ url_for('predict')}}"method="post">
-        <input type="text" name="percent biking" placeholder="Percent population biking" required="required" /><br>
-        <input type="text" name="percent smoking" placeholder="Percent population smoking" required="required" /><p>
+        <input type="text" name="Home Team" placeholder="Enter Home team here" required="required" /><br>
+        <input type="text" name="Away Team" placeholder="Enter Away team here" required="required" /><p>
     
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict percent population with heart disease</button></p>
+        <button type="submit" class="btn btn-primary btn-block btn-large">Click to Predict</button></p>
     </form>
     
     <br>
