--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
     <meta charset="UTF-8">
       
@@ -23,10 +23,12 @@
         <button type="submit" class="btn btn-primary btn-block btn-large">Click to Predict</button></p>
     </form>
     
-    <br>
    <br>
     <h4 style="color:Violet;">
    {{ prediction_text }} </h4>
+
+    <h4 style="color:Grey;">
+    {{ test_text}} </h4>
     
  </div>
     
