user input manipulation

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
    {{ prediction_text }} </h4>
 
     <h4 style="color:Grey;">
-    {{ test_text}} </h4>
+    {{ test_text}}{{input_length}} </h4>
     
  </div>
     
