--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,17 @@
     
         <button type="submit" class="btn btn-primary btn-block btn-large">Click to Predict</button></p>
     </form>
-    
    <br>
     <h4 style="color:Violet;">
-   {{ prediction_text }} </h4>
+    {{ hTeam }} </h4>
+
+    <h4 style="color:Violet;">
+    {{ aTeam }} </h4>
 
     <h4 style="color:Grey;">
-    {{ test_text}}{{input_length}} </h4>
+    {{ winTeam }} 
+    <br>
+    {{input_length}} </h4>
     
  </div>
     
