--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <h4 style="color:Grey;">
     {{ winTeam }} 
     <br>
-    {{input_length}} </h4>
+    {{ winProb }} </h4>
     
  </div>
     
