--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 <body style="background: #000;">
  <div class="login">
         <h1 style="color:Grey;">NHL Game Prediction Model</h1>
+        <h4 style="color:Grey;">Version: 1.0.0</h4>
     
      <!-- Action is where the data is sent. In our case, predict page.
      If action is omitted, it assumed to be the current page -->
