--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Character encoding information -->
     <meta charset="UTF-8">
       
     <!-- Make it compatible to mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      
-    <title>NHL Game Predictor</title>
-      
+    
+    <!-- Sets the title of the webpage -->
+    <title>NHL Game Predictor</title>     
 </head>
     
 <body style="background: #000;">
